--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "author": "Acutis Tecnologia",
   "license": "MIT",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "babel-node ./src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,7 +19,14 @@
     "sucrase": "^3.17.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.12",
+    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
     "sequelize-cli": "^6.2.0"
   }
 }
