--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bluefields Server",
+  "name": "bluefields-server",
   "version": "1.0.0",
   "main": "server.js",
   "author": "Byou",
